Bug 101472 - Mouseover highlight does not disappear after moving mouse out of the formula pane
Summary: Mouseover highlight does not disappear after moving mouse out of the formula ...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Formula Editor (show other bugs)
Version:
(earliest affected)
5.2.0.4 release
Hardware: All All
: medium minor
Assignee: Not Assigned
URL:
Whiteboard: target:5.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-13 12:00 UTC by OfficeUser
Modified: 2017-02-13 03:28 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Video (117.22 KB, application/x-xz)
2016-08-13 12:00 UTC, OfficeUser
Details

Note You need to log in before you can comment on or make changes to this bug.
Description OfficeUser 2016-08-13 12:00:12 UTC
Created attachment 126780 [details]
Video

Please download, extract* and view the attached movie.

It shows 2 issues:

1.
The mouse over effect (gray background) does not vanish when moving the mouse out of the sidebar.

2.
When closing and opening the sidebar the content is not displayed properly. The user has to click once on a button to restore the display.


(You can extract this heavily compressed (160 MB -> 120 kb) xz file using 7-zip.org or peazip.org.)




(Found in 5.2.0.4 Windows build and 5.2.0.4 Linux build.)
Comment 1 Buovjaga 2016-08-30 18:20:53 UTC
I can reproduce both of the issues with 5.2. However, I cannot repro issue 2 with a fairly fresh build of 5.3.
OfficeUser: could you test with 5.3?

For testers: to repro the mouseover issue, you must hover the mouse out of the pane area quite quickly.

Arch Linux 64-bit, KDE Plasma 5
Version: 5.2.0.4
Build ID: 5.2.0-1
CPU Threads: 8; OS Version: Linux 4.6; UI Render: default; 
Locale: fi-FI (fi_FI.UTF-8)
Comment 2 OfficeUser 2016-08-30 19:17:39 UTC
@Buovjaga: Thanks for your investigation. If you can reproduce issue 2 with build 5.2 but not with build 5.3 it is very likely fixed.

So lets concentrate on the remaining issue 1.
Comment 3 Commit Notification 2016-11-16 12:56:27 UTC
Takeshi Abe committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5c49c13b7b963b8e05d68f6a050c8f8184b825fd

tdf#101472 Prompt repaint of Elements window when mouse leaves

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2017-01-13 12:34:48 UTC
Hello,
Is this bug fixed?
If so, could you please close it as RESOLVED FIXED?