tdf#101472 Prompt repaint of Elements window when mouse leaves

This also reduces some cycles in SmElementsControl::MouseMove().

Change-Id: I1dd5f9cd37e4a78010ebb719b4726f9b061d8ff2
Reviewed-on: https://gerrit.libreoffice.org/30897
Reviewed-by: Takeshi Abe <tabe@fixedpoint.jp>
Tested-by: Takeshi Abe <tabe@fixedpoint.jp>